--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 NODE_ENV_ConsumerKey = "86XElAuWBQZObcO4dbmn7OeS3"
 NODE_ENV_ConsumerSecret = "Yvyd4wu2qCScx10hW1RlVT70P7gCU2RCvUzd9KBcF93tn8de5p"
+NODE_ENV_PublicKey = "1xK4839pBI1ItsVN6uGAda-qwg4"
+NODE_ENV_SecretKey = "nN3c6cdgoZXqMEf5Fzl-vlV9w54"
