--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
   "name": "swimcalc2",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www",
-    "debugstart": "DEBUG=swimCalc2:* PORT=8000 yarn run devstart",
+    "debugstart": "DEBUG=swimCalc2:*  yarn run devstart",
     "test": "node_modules/mocha/bin/mocha"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
-    "express": "~4.16.0",
+    "express": "^4.17.1",
     "express-session": "^1.17.0",
     "helmet": "1.1.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
+    "oauth-js": "^0.9.9",
+    "oauthio": "^0.3.5",
     "passport": "^0.4.1",
     "passport-twitter": "^1.0.4",
     "pug": "2.0.0-beta11",
     "twitter": "*"
   },
   "devDependencies": {
+    "babel": "*",
     "mocha": "4.0.1",
     "nodemon": "^2.0.2"
   }
