--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "oauthio": "^0.3.5",
     "passport": "^0.4.1",
     "passport-twitter": "^1.0.4",
+    "pg": "^8.0.2",
+    "pg-hstore": "^2.3.3",
     "pug": "2.0.0-beta11",
+    "sequelize": "^5.21.6",
     "twitter": "*"
   },
   "devDependencies": {
